--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ body {
   font-family: "Arial", sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  background-color: #fff;
+  background-color: #222;
   color: #222;
 }
 
@@ -44,4 +44,108 @@ img {
 /* MAIN-CONTENT */
 .main-content {
   flex-grow: 1;
+}
+
+.setting-wrapper {
+  background-color:#FDEC51;
+  width: 500px;
+  margin: 0 auto;
+  padding: 30px 40px;
+  height: auto;
+
+}
+.setting-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: 400;
+}
+
+.setting-header i{
+  opacity: 0.7;
+  padding: 5px;
+}
+.setting-header i:hover{
+  opacity: 1;
+  cursor: pointer;
+}
+
+
+.setting-title {
+  font-weight: 500;
+}
+
+.setting-body {
+  display: flex;
+  flex-direction: column;
+
+}
+.person-img{
+  position: absolute;
+  top: -25px;
+  left: 50px;
+  border-radius: 50%;
+}
+
+label{
+  display: block;
+  margin-top: 20px;
+  cursor: pointer;
+  font-weight: 500;
+}
+.setting-main-part {
+  background-color: #fff;
+  position: relative;
+  width: 500px;
+  margin-right: -40px;
+  padding: 40px 30px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+input, textarea{
+border: none;
+padding: 10px 0;
+border-bottom: 1px solid rgba(34, 34, 34, 0.385);
+outline: none;
+cursor:text
+}
+
+.username {
+  width: 100%;
+}
+.fullname {
+  display: flex;
+  flex-wrap: wrap;
+}
+.first-n {
+  width: 50%;
+}
+.first-name{
+  width:50%;
+}
+.last-n {
+  width: 50%;
+}
+.email {
+  width: 100%;
+}
+.textarea {
+  width: 100%;
+  min-height: 70px;
+  resize: vertical;
+}
+.btn-form {
+  float: right;
+  margin-left: 10px;
+  background-color:rgba(0, 0, 0, 0);
+  border: none;
+  outline: none;
+  opacity: 0.7;
+}
+.btn-form:hover{
+  opacity: 1;
+}
+
+.clr{
+  clear: both;
 }
